<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".GiaoDien.HomeActivity">


    <TextView

        android:textSize="30dp"

        style="@style/thongtin"
        android:text="@string/quanlikho"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/amnhac"/>


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnsanpham"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/click"
            android:text="@string/quanlisanpham" />
    </LinearLayout>


    <TextView
        style="@style/chucnang"
        android:text="@string/ngonngu"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <Button
            style="@style/btnimg"
            android:id="@+id/btnVN"
            android:layout_marginRight="10dp"
            android:background="@drawable/vn"/>
        <Button
            style="@style/btnimg"
            android:id="@+id/btnEN"
            android:background="@drawable/en"/>
    </LinearLayout>

</LinearLayout>
